--- a/views/base.html
+++ b/views/base.html
@@ -17,6 +17,6 @@
     {% block script %} 
 
     {% endblock %}
-    <!-- <script src="/dist/js/bootstrap.bundle.js" defer></script> -->
+    <script src="/dist/js/bootstrap.bundle.js" defer></script>
 </body>
 </html>
