--- a/views/login.html
+++ b/views/login.html
@@ -89,13 +89,16 @@
         </div>
       </div>
     </div>
-    <div class="footer-content">
-      <h3 class="text-center">Keep Track of all your job applications</h3>
-      <h4 class="text-center">and never miss an interview</h4>
-      <span>{{ req.session }}</span>
-    </div>
   </section>
 </main>
+<!-- <div class="footer-content">
+  <div class="foot-img">
+    <img src="/images/patterns.svg" alt="">
+  </div>
+  <h3 class="text-center text-primary">Keep Track of all your job applications</h3>
+  <h4 class="text-center">and never miss an interview</h4>
+  <span>{{ req.session }}</span>
+</div> -->
 {% endblock %} {% block script %}
 <script>
   const loginForm = document.querySelector("#loginForm");
