--- a/views/nav.html
+++ b/views/nav.html
@@ -1,6 +1,6 @@
 <nav class="navbar navbar-expand-lg mb-3">
     <div class="container mt-3">
-      <a class="navbar-brand fs-3" style="color:#6a76f8;font-weight: bold;" href="#">JobTracker</a>
+      <a class="navbar-brand fs-3" style="color:#6a76f8;font-weight: bold;" href="">JobTracker</a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
